Updates for Django 1.7

--- a/salt/roots/salt/app/supervisor/app.conf
+++ b/salt/roots/salt/app/supervisor/app.conf
@@ -1,5 +1,5 @@
 [program:gunicorn_app]
-command={{ pillar['django']['virtualenv'] }}/bin/python manage.py run_gunicorn --settings={{ pillar['django']['settings']}} --pid {{ pillar['django']['run_dir'] }}/gunicorn.pid
+command={{ pillar['django']['virtualenv'] }}/bin/gunicorn {{ pillar['django']['wsgi_module'] }} -e DJANGO_SETTINGS_MODULE={{ pillar['django']['settings']}}
 directory={{ pillar['django']['path'] }}
 stdout_logfile={{ pillar['django']['log_path']}}gunicorn.log
 redirect_stderr=true
