--- a/salt/roots/salt/nginx/nginx.conf
+++ b/salt/roots/salt/nginx/nginx.conf
@@ -18,6 +18,7 @@ http {
     gzip on;
     gzip_disable "msie6";
     types_hash_max_size 8192;
+    server_names_hash_bucket_size 64;
 
     include /etc/nginx/sites-enabled/*;
 }
