Add a default bootstrap template, fix debug toolbar, and fabfile fix for Django 1.7

--- a/salt/roots/salt/app/nginx.conf
+++ b/salt/roots/salt/app/nginx.conf
@@ -4,6 +4,9 @@ server {
     # Make site accessible from http://localhost/
     server_name localhost;
 
+    location /static/debug_toolbar/ {
+        alias {{ pillar['django']['virtualenv'] }}/lib/python2.7/site-packages/debug_toolbar/static/debug_toolbar/;
+    }
     location /static/admin/ {
         alias {{ pillar['django']['virtualenv'] }}/lib/python2.7/site-packages/django/contrib/admin/static/admin/;
     }
